--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.holon-platform</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.1.5</version>
+		<version>1.1.6</version>
 	</parent>
 
 	<artifactId>platform-root</artifactId>
@@ -56,8 +56,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<java.compiler.source>1.8</java.compiler.source>
-		<java.compiler.target>1.8</java.compiler.target>
+		<java.compiler.source>17</java.compiler.source>
+		<java.compiler.target>17</java.compiler.target>
 
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 
@@ -65,7 +65,7 @@
 		<bintray.package>platform</bintray.package>
 
 		<!-- Core -->
-		<holon.core.version>5.5.0</holon.core.version>
+		<holon.core.version>5.5.1-SNAPSHOT</holon.core.version>
 		<!-- Reactor -->
 		<holon.reactor.version>5.5.0</holon.reactor.version>
 		<!-- JSON -->
@@ -73,13 +73,13 @@
 		<!-- JAX-RS -->
 		<holon.jaxrs.version>5.5.0</holon.jaxrs.version>
 		<!-- JDBC -->
-		<holon.jdbc.version>5.5.0</holon.jdbc.version>
+		<holon.jdbc.version>5.5.1-SNAPSHOT</holon.jdbc.version>
 		<!-- JPA -->
-		<holon.jpa.version>5.5.0</holon.jpa.version>
+		<holon.jpa.version>5.5.1-SNAPSHOT</holon.jpa.version>
 		<!-- JDBC Datastore -->
-		<holon.jdbc.datastore.version>5.5.0</holon.jdbc.datastore.version>
+		<holon.jdbc.datastore.version>5.5.1-SNAPSHOT</holon.jdbc.datastore.version>
 		<!-- JPA Datastore -->
-		<holon.jpa.datastore.version>5.5.0</holon.jpa.datastore.version>
+		<holon.jpa.datastore.version>5.5.1-SNAPSHOT</holon.jpa.datastore.version>
 		<!-- JPA Datastore QueryDSL -->
 		<holon.jpa.datastore.querydsl.version>5.5.0</holon.jpa.datastore.querydsl.version>
 		<!-- MongoDB Datastore -->
